<resources>
    <string name="app_name">海螺音乐</string>
    <string name="tool_bar_title">海螺音乐</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_list">Play List</string>
    <string name="menu_sound">Sounds</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_exit">Exit</string>

    <string name="search_music">search</string>
    <string name="playing_music">playing</string>
</resources>
