<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_sounds"
            android:icon="@drawable/ic_menu_sounds"
            android:title="@string/menu_sound" />
        <item
            android:id="@+id/nav_skin"
            android:icon="@drawable/ic_menu_skin"
            android:title="@string/menu_theme" />
    </group>

    <item android:title="System">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
